update checkout page view

--- a/sample/src/main/resources/templates/layout.html
+++ b/sample/src/main/resources/templates/layout.html
@@ -3,6 +3,41 @@
         <title>
             Veritrans Java Client Client Sample Store
         </title>
+
+        <style>
+            .button+
+            .button{
+                margin-left:10px
+            }
+            .button{
+                border:0;
+                padding:8px 20px;
+                color:white
+            }
+            .button:hover{
+                text-decoration:none;
+                color:white
+            }
+            .button:active,.button:focus{
+                outline:0
+            }
+
+            .btn-vt-web{
+                background:#3693d6 url("/assets/images/vt_web-logo.png") center center no-repeat;
+                display:inline-block;
+                background-size:58%;
+                padding:20px 80px !important
+            }
+            .btn-vt-web:hover{background-color:rgba(54,147,214,0.9)}
+
+            .btn-vt-direct{
+                background:#67364b url("/assets/images/vt_direct-logo.png") center center no-repeat;
+                display:inline-block;
+                background-size:70%;
+                padding:20px 80px !important
+            }
+            .btn-vt-direct:hover{background-color:rgba(103,54,75,0.9)}
+        </style>
     </head>
     <body>
         <div th:fragment="header">
