--- a/sample/src/main/resources/templates/checkout.html
+++ b/sample/src/main/resources/templates/checkout.html
@@ -1,24 +1,35 @@
 <html>
-    <head th:replace="layout::html-head"></head>
+    <head th:replace="layout::html-head"/>
     <body>
         <div th:replace="layout::header"/>
 
         <div style="text-align: center; width: 100%;">
-            <h1>Checkout Items</h1>
-            <table border="1" align="center">
-                <tr>
-                    <th>Product</th>
-                    <th>Price Each</th>
-                    <th>Amount</th>
-                    <th>Total</th>
-                </tr>
-                <tr th:each="cartItem : ${cartItems}">
-                    <td th:text="${cartItem.product.shortName}"></td>
-                    <td th:text="|Rp. ${cartItem.product.priceIdr}|"></td>
-                    <td th:text="${cartItem.count}"></td>
-                    <td th:text="|Rp. ${cartItem.totalPrice}|"></td>
-                </tr>
-            </table>
+            <div style="display: inline-block;">
+
+                <h1>Checkout Items</h1>
+                <table border="1">
+                    <tr>
+                        <th>Product</th>
+                        <th>Price Each</th>
+                        <th>Amount</th>
+                        <th>Total</th>
+                    </tr>
+                    <tr th:each="cartItem : ${cartItems}">
+                        <td th:text="${cartItem.product.shortName}"></td>
+                        <td th:text="|Rp. ${cartItem.product.priceIdr}|"></td>
+                        <td th:text="${cartItem.count}"></td>
+                        <td th:text="|Rp. ${cartItem.totalPrice}|"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" align="right" th:text="|Rp. ${totalPrice}|"></td>
+                    </tr>
+                </table>
+
+                <form method="post">
+                    <button class='button btn-vt-web' id='vtweb' name='payment_method' type='submit' value='vtweb'></button>
+                    <button class='button btn-vt-direct' id='vtdirect' name='payment_method' type='submit' value='credit_card'></button>
+                </form>
+            </div>
         </div>
         <div th:replace="layout::footer"/>
     </body>
