--- a/sample/src/main/resources/templates/layout.html
+++ b/sample/src/main/resources/templates/layout.html
@@ -1,4 +1,7 @@
-<html>
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+
     <head th:fragment="html-head">
         <title>
             Veritrans Java Client Client Sample Store
