--- a/sample/src/main/resources/templates/index.html
+++ b/sample/src/main/resources/templates/index.html
@@ -1,29 +1,41 @@
 <html>
-    <head th:replace="layout::html-head"></head>
-    <body>
-        <div th:replace="layout::header"/>
-        <h1>Product list</h1>
+<head th:replace="layout::html-head" />
 
-        <table border="1">
-            <tr>
-                <th>Product</th>
-                <th>Price Each</th>
-                <th>Action</th>
-            </tr>
-            <tr th:each="product : ${products}">
-                <td align="center">
-                    <img th:src="${product.thumbnailFilePath}"/><br/>
-                    <span th:text="${product.shortName}"/>
-                </td>
-                <td th:text="|Rp. ${product.priceIdr}|"/>
-                <td>
-                    <form method="get" action="/cart_add">
-                        <input type="hidden" name="product_id" th:value="${product.id}"/>
-                        <input type="submit" th:value="'Add to Cart'"/>
-                    </form>
-                </td>
-            </tr>
-        </table>
-        <div th:replace="layout::footer"/>
-    </body>
+<body class="statics__index">
+<div th:replace="layout::header" />
+<div class="container component">
+    <div class="row-fluid" id="notif-app">
+        <div class="span12">
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <!-- .well -->
+            <div class="new-arrival-list">
+                <div class="product-sneak-peek" th:each="product : ${products}">
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 inner">
+                        <div class="name">
+                            <h4 th:text="${product.shortName}" />
+                            <div class="price" th:text="|Rp. ${product.priceIdr}|" />
+                        </div>
+                        <div class="image">
+                            <img th:alt="${product.shortName}" th:src="${product.thumbnailFilePath}" />
+                        </div>
+                        <div class="form-buy">
+                            <form accept-charset="UTF-8" action="/cart_add" method="get">
+                                <input name="product_id" type="hidden" th:value="${product.id}" />
+                                <button class="button buy-button">
+                                    Buy
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:replace="layout::footer" />
+</body>
+
 </html>
