--- a/sample/src/main/resources/templates/layout.html
+++ b/sample/src/main/resources/templates/layout.html
@@ -64,7 +64,7 @@
 <head th:fragment="html-head">
     <title>Veritrans Java Client Client Sample Store</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet" type="text/css" />
-    <link href="/assets/application-221b9cfb81500a9c4cb8871b215e792c.css" media="all" rel="stylesheet" />
+    <link href="/assets/application.css" media="all" rel="stylesheet" />
 </head>
 
 <div class="container head" style="padding-top: 20px;" th:fragment="header">
@@ -97,6 +97,6 @@
         </div>
     </div>
     <div class='bottom-js' style='display:none'>
-        <script src="/assets/application-62b44bb9cc401cfcad44686fbd2dddc0.js"></script>
+        <script src="/assets/application.js"></script>
     </div>
 </div>
