update to comply with andes's commit

--- a/sample/src/main/resources/templates/checkout/choose_payment.html
+++ b/sample/src/main/resources/templates/checkout/choose_payment.html
@@ -59,12 +59,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <form accept-charset="UTF-8" action="/orders/6948768b/checkout" class="edit_order_record" id="edit_order_record_323" method="post">
-                    <div style="display:none">
-                        <input name="utf8" type="hidden" value="&#x2713;" />
-                        <input name="_method" type="hidden" value="put" />
-                        <input name="authenticity_token" type="hidden" value="zqFMAe4eNIZF5Ixv8O+tk8agyCYSsoDQfPpgKL2pRpw=" />
-                    </div>
+                <form accept-charset="UTF-8" class="edit_order_record" id="edit_order_record_323" method="post">
                     <div class='row-fluid'>
                         <div class='span12'>
                             <div class='form-horizontal'>
@@ -180,8 +175,8 @@
                                 <div class='text-center'>
                                     <p>Pay with</p>
                                     <div class='btn-group'>
-                                        <button class='button btn-vt-web' id='vtweb' name='payment_type' type='submit' value='vtweb'></button>
-                                        <button class='button btn-vt-direct' id='vtdirect' name='payment_type' type='submit' value='credit_card'></button>
+                                        <button class='button btn-vt-web' id='vtweb' name='paymentMethod' type='submit' value='vtweb'></button>
+                                        <button class='button btn-vt-direct' id='vtdirect' name='paymentMethod' type='submit' value='creditCard'></button>
                                     </div>
                                 </div>
                             </div>
