Add credit card javascript handler

--- a/sample/src/main/resources/templates/layout.html
+++ b/sample/src/main/resources/templates/layout.html
@@ -100,3 +100,17 @@
         <script src="/assets/application.js"></script>
     </div>
 </div>
+
+<div class="container foot" th:fragment="footer-vtdirect-creditcard">
+    <div class="row-fluid">
+        <div class="span12">
+            <hr class="top-off" />
+            <small>© 2015 PT Midtrans (Veritrans Indonesia). All Rights Reserved</small>
+        </div>
+    </div>
+    <div class='bottom-js' style='display:none'>
+        <script src="/assets/application.js"></script>
+        <script src="https://api.sandbox.veritrans.co.id/v2/assets/js/veritrans.min.js"></script>
+        <script src="/assets/vtdirect.js"></script>        
+    </div>
+</div>
