--- a/sample/src/main/resources/templates/checkout/choose_payment.html
+++ b/sample/src/main/resources/templates/checkout/choose_payment.html
@@ -110,7 +110,7 @@
                                 <div class='control-group'>
                                     <label class="control-label" for="order_record_billing_phone">Phone</label>
                                     <div class='controls'>
-                                        <input class="span12" id="order_record_billing_phone" name="billingPhone" type="text" value="62 21 573 6789" />
+                                        <input class="span12" id="order_record_billing_phone" name="billingPhone" type="text" value="62215736789" />
                                     </div>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
                                 <div class='control-group'>
                                     <label class="control-label" for="order_record_shipping_phone">Phone</label>
                                     <div class='controls'>
-                                        <input class="span12" id="order_record_shipping_phone" name="shippingPhone" type="text" value="62 21 573 6789" />
+                                        <input class="span12" id="order_record_shipping_phone" name="shippingPhone" type="text" value="62215736789" />
                                     </div>
                                 </div>
                             </div>
